наши первые изменения

--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Basketball League</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<header>
-		<div class="container">
-			<div class="offer-title">
-				<h1>Любительская баскетбольная лига Беларуси
-				</h1>
-				<p>Amateur Basketball League of Belarus</p>
-			</div>
-			<div class="logo"><img src="src/img/fd1380a8-5c05-4c6c-bc23-fce3ff017329.png" alt=""></div>
-				<nav class="nav">
-					<ul>
-						<a href="#"><li>Главная</li></a>
-						<a href="#"><li>Расписание</li></a>
-						<a href="#"><li>Команды</li></a>
-						<a href="#"><li>Документы</li></a>
-						<a href="#"><li>Медиа</li></a>
-					</ul>
-				</nav>
-		</div>
-	</header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Basketball League</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div class="offer-title">
+          <h1>Любительская баскетбольная лига Беларуси</h1>
+          <p>Amateur Basketball League of Belarus</p>
+        </div>
+        <div class="logo">
+          <img src="src/img/fd1380a8-5c05-4c6c-bc23-fce3ff017329.png" alt="" />
+        </div>
+        <nav class="nav">
+          <ul>
+            <a href="#"><li>Главная</li></a>
+            <a href="#"><li>Расписание</li></a>
+            <a href="#"><li>Команды</li></a>
+            <a href="#"><li>Документы</li></a>
+            <a href="#"><li>Медиа</li></a>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <p>Very good speak English</p>
+  </body>
 </html>
